# weak_true-rs

./: Cargo.toml  README.md
src/: lib.rs
weak_true-proc_macro/: Cargo.toml
weak_true-proc_macro/src/: lib.rs
