[package]
name = "weak_true"
version = "0.1.7"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "Similar to the automatic implicit conversion to boolean values in weakly typed languages"
keywords = ["no_std", "weak-typed"]
categories = ["no-std", "no-std::no-alloc"]
license = "MIT"
repository = "https://github.com/A4-Tacks/weak_true-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
