[package]
name = "weak_true"
version = "0.2.1"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "Similar to the automatic implicit conversion to boolean values in weakly typed languages"
keywords = ["no_std", "weak-typed"]
categories = ["no-std", "no-std::no-alloc"]
license = "MIT"
repository = "https://github.com/A4-Tacks/weak_true-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["weak_true-proc_macro"]

[features]
default = ["std", "macros"]
std = []
macros = ["weak_true-proc_macro"]

[dependencies]
weak_true-proc_macro = { version = "0.2.0", path = "weak_true-proc_macro", optional = true }
